Fixed baby foxes and hares. Fixed Transient require sunlight for Drying mats and drying racks.

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -4347,12 +4347,8 @@
 	"prefixandcreature-pigsowdarkgrey": "Dark Grey Sow",
 	"prefixandcreature-pigsowsmokegrey": "Smoke Grey Sow",
 	"prefixandcreature-pigsowwalnut": "Walnut Sow",
-	"prefixandcreature-pigpigletashgrey": "Ash Grey Piglet",
-	"prefixandcreature-pigpigletbrown": "Brown Piglet",
-	"prefixandcreature-pigpigletchocolate": "Chocolate Piglet",
-	"prefixandcreature-pigpigletdarkgrey": "Dark Grey Piglet",
-	"prefixandcreature-pigpigletsmokegrey": "Smoke Grey Piglet",
-	"prefixandcreature-pigpigletwalnut": "Walnut Piglet",
+	"prefixandcreature-pigpiglet": "Wild Piglet",
+	"prefixandcreature-pigpigletbrown": "Brown Piglet",	
 
 	"item-creature-pig-boar-ashgrey": "Ash Grey Boar",
 	"item-creature-pig-boar-brown": "Brown Boar",
@@ -4366,12 +4362,7 @@
 	"item-creature-pig-sow-darkgrey": "Dark Grey Sow",
 	"item-creature-pig-sow-smokegrey": "Smoke Grey Sow",
 	"item-creature-pig-sow-walnut": "Walnut Sow",
-	"item-creature-pig-piglet-ashgrey": "Ash Grey Piglet",
-	"item-creature-pig-piglet-brown": "Brown Piglet",
-	"item-creature-pig-piglet-chocolate": "Chocolate Piglet",
-	"item-creature-pig-piglet-darkgrey": "Dark Grey Piglet",
-	"item-creature-pig-piglet-smokegrey": "Smoke Grey Piglet",
-	"item-creature-pig-piglet-walnut": "Walnut Piglet",
+	"item-creature-pig-piglet": "Wild Piglet",	
 
 	"prefixandcreature-pig-domestic-boar": "Domestic Boar",
 	"prefixandcreature-pig-domestic-sow": "Domestic Sow",
