adding block discriptions

--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -32,25 +32,25 @@
   "item-porkchops-cooked": "Cooked Pork Chops",
   "item-porkchops-raw": "Raw Pork Chops",
   "item-porkchops-cured": "Cured Pork Chops",
-  "item-porkchops-salted": "Porkchops (Salted)",
-  "item-porkchops-dry": "Porkchops (Dry)",
+  "item-porkchops-salted": "Salted Pork Chops",
+  "item-porkchops-dry": "Dried Pork Chops",
 
   "item-mutton-cooked": "Cooked Mutton",
   "item-mutton-raw": "Raw Mutton",
   "item-mutton-cured": "Cured Mutton",
-  "item-mutton-salted": "Mutton (Salted)",
-  "item-mutton-dry": "Mutton (Dry)",
+  "item-mutton-salted": "Salted Mutton",
+  "item-mutton-dry": "Dried Mutton",
 
-  "item-hare-raw": "Hare (Raw)",
-  "item-hare-cooked": "Hare (Cooked)",
-  "item-hare-cured": "Hare (Cured)",
+  "item-hare-raw": "Raw Hare",
+  "item-hare-cooked": "Cooked Hare",
+  "item-hare-cured": "Cured Hare",
   
   "item-pemmican-sausage": "Pemmican (Sausage)",
   "recipeingredient-item-mutton-raw": "mutton",
   "recipeingredient-item-porkchops-raw": "pork chops",
   "recipeingredient-item-hare-raw": "hare",
 
-  "item-bowlimb-carved": "Carved limb",
+  "item-bowlimb-carved": "Carved Limb",
   "itemdesc-bowlimb-carved": "Carved limb made with a knife and stick. Combine with bowstring to craft the carved bow.",
   "item-bowlimb-composite": "Composite Limb",
   "itemdesc-bowlimb-composite": "Made by combining a carved limb, with glue, horn slab, and sinew. Combine with bowstring to craft the composite bow.",
@@ -72,11 +72,11 @@
   "itemdesc-byproducts-sinew": "Used as cordage in immersive crafting, Used to craft Sinew fibers and bowlimbs.",
   "item-byproducts-sinew-fibers": "Sinew Fibers",
   "itemdesc-byproducts-sinew-fibers": "Place any hammer above Sinew (grid). Used to craft Glue and Sinew Thread (grid).",
-  "item-byproducts-sinew-thread": "Sinew Thread ",
+  "item-byproducts-sinew-thread": "Sinew Thread",
   "itemdesc-byproducts-sinew-thread": "Place 3 Sinew Fibers in a horizontal row (grid). Used to craft Sinew Rope and Bowstring. (Future uses: sewing thread, fishing line)",
-  "item-byproducts-rope": "rope ",
+  "item-byproducts-rope": "Sinew Rope",
   "itemdesc-byproducts-rope": "Crafted from 6 Sinew threads (Grid, 2 columns of 3). Currently no use. (Future Use: lasso.)",
-  "item-byproducts-lasso": "lasso ",
+  "item-byproducts-lasso": "Sinew Lasso",
   "itemdesc-byproducts-lasso": "Assemble a 2 x 2 Square of Sinew Thread in the top right corner and 1 on the left bottom of the grid.",
   "item-byproducts-bowstring": "Bowstring",
   "itemdesc-byproducts-bowstring": "Crafted from 2 Sinew and 3 Sinew thread (grid). Combine with crafted limbs to make immersion bows: carved, composite, and recurve. Replace the bowstring on immersion bows to repair the weapon.",
@@ -111,10 +111,10 @@
   "blockdesc-palmfruits-*": "Harvest using RMB",
   "block-tropicalfruits-bananna-*": "Banana",
   "blockdesc-tropicalfruits-bananna": "Cannot be used in cooking, but can be eaten raw.",
-  "block-tropicalfruits-coconut-*": "Coconut",
-  "blockdesc-tropicalfruits-coconut": "Place on a solid surface and use (RMB) to cut into slices.",
   "block-tropicalfruits-coconutshell-*": "Coconut husk",
   "blockdesc-tropicalfruits-coconutshell": "Place on a solid surface and use (RMB) to remove the husk.",
+  "block-tropicalfruits-coconut-*": "Coconut",
+  "blockdesc-tropicalfruits-coconut": "Place on a solid surface and use (RMB) to cut into slices.",
   "block-tropicalfruits-coconutslice-*": "Coconut slice",
   "blockdesc-tropicalfruits-coconutslice": "Cannot be used in cooking, but can be eaten raw.",
   "block-tropicalfruits-coconutbroken-*": "Coconut broken",
@@ -134,19 +134,19 @@
   
   "block-fence-wicker-*": "Wicker fence",
   "blockdesc-fence-wicker": "Immersion addition, a simple fence crafted from sticks.",
+  "block-gate-gap-*": "Fence Gap",
+  "blockdesc-gate-gap": "Immersion addition, a fence gap crafted from sticks.",
   
-  "block-attachment-industrial-*": "Industrial style lamppost mount",
-  "blockdesc-attachment-industrial-*": "Immersion addition. Place on a solid block or post to attach a lantern",
-  "block-attachment-railroad-*": "Railroad style lampost mount",
-  "blockdesc-attachment-railroad-*": "Immersion addition. Place on a solid block or post to attach a lantern",
   "block-base": "Post base",
   "blockdesc-base": "Immersion addition. Used as a base for both industrial and railroad posts",
   "block-post-industrial-*": "Industrial style post",
   "blockdesc-post-industrial-*": "Immersion addition. Place on a post base to create a lamppost. Mounts can be added to suspend lanterns.",
   "block-post-railroad-*": "Railroad style post",
   "blockdesc-post-railroad-*": "Immersion addition. Place on a post base to create a lamppost. Mounts can be added to suspend lanterns.",
-  "block-gate-gap-*": "Fence Gap",
-  "blockdesc-gate-gap": "Immersion addition, a fence gap crafted from sticks.",
+  "block-attachment-industrial-*": "Industrial style lamppost mount",
+  "blockdesc-attachment-industrial-*": "Immersion addition. Place on a solid block or post to attach a lantern",
+  "block-attachment-railroad-*": "Railroad style lampost mount",
+  "blockdesc-attachment-railroad-*": "Immersion addition. Place on a solid block or post to attach a lantern",
   
   "block-haybale-*": "Bale of hay",
 
@@ -169,8 +169,8 @@
   "block-branch-cordage-maple-debarked-*": "Maple Debarked Very Thin Branch with Cordage",
   
   "blockdesc-branch-cordage-*-bark-leatherstrips": "(Sneak + RMB) with 4 Very Thin Branches of the same type to make a Bag Assembly",
-  "blockdesc-branch-cordage-*-bark-sisal": "(Sneak + RMB) with 4 Very Thin Branches of the same type to make a Bag Assembly",
-  "blockdesc-branch-cordage-*-bark-reeds": "(Sneak + RMB) with 4 Very Thin Branches of the same type to make a Basket Frame",
+  "blockdesc-branch-cordage-*-bark-sisal": "(Sneak + RMB) with 4 Very Thin Branches (of the same type) to make a Bag Assembly",
+  "blockdesc-branch-cordage-*-bark-reeds": "(Sneak + RMB) with 4 Very Thin Branches (of the same type) to make a Basket Frame",
   
   "block-basket-frame-*": "Basket frame",
   "blockdesc-basket-frame-*": "(Sneak + RMB) with 4 Reeds to make a Basket",
@@ -219,7 +219,7 @@
   "block-drying-rack-pine-sisal-empty-*": "Pine & Sisal Drying Rack",
   "block-drying-rack-acacia-sisal-empty-*": "Acacia & Sisal Drying Rack",
   "block-drying-rack-kapok-sisal-empty-*": "Kapok & Sisal Drying Rack",
-  "blockdesc-drying-rack-*-empty-*": "(Sneak + RMB) with 4 pieces of Salted Meat, Salted Porkchops or Salted Mutton ",
+  "blockdesc-drying-rack-*-empty-*": "Add 4 pieces of Salted Meat, Salted Porkchops or Salted Mutton (Sneak + RMB)",
 
   "block-drying-rack-birch-leatherstrips-porkchops-salted-*": "Birch & Leather Strips Drying Rack with Salt Pork",
   "block-drying-rack-oak-leatherstrips-porkchops-salted-*": "Oak & Leather Strips Drying Rack with Salt Pork",
@@ -245,7 +245,7 @@
   "block-drying-rack-pine-sisal-porkchops-salted-*": "Pine & Sisal Drying Rack with Salt Pork",
   "block-drying-rack-acacia-sisal-porkchops-salted-*": "Acacia & Sisal Drying Rack with Salt Pork",
   "block-drying-rack-kapok-sisal-porkchops-salted-*": "Kapok & Sisal Drying Rack with Salt Pork",
-  "blockdesc-drying-rack-*-porkchops-salted-*": "Will make 4 Dry Pork Chops in 72 hours, requires direct sunlight ",
+  "blockdesc-drying-rack-*-porkchops-salted-*": "Will make 4 Dry Pork Chops after 72 hours of direct sunlight.",
 
   "block-drying-rack-birch-leatherstrips-porkchops-dry-*": "Birch & Leather Strips Drying Rack with Dry Pork",
   "block-drying-rack-oak-leatherstrips-porkchops-dry-*": "Oak & Leather Strips Drying Rack with Dry Pork",
@@ -297,7 +297,7 @@
   "block-drying-rack-pine-sisal-mutton-salted-*": "Pine & Sisal Drying Rack with Salt Mutton",
   "block-drying-rack-acacia-sisal-mutton-salted-*": "Acacia & Sisal Drying Rack with Salt Mutton",
   "block-drying-rack-kapok-sisal-mutton-salted-*": "Kapok & Sisal Drying Rack with Salt Mutton",
-  "blockdesc-drying-rack-*-mutton-salted": "Will make 4 Dry Mutton in 72 hours, requires direct sunlight ",
+  "blockdesc-drying-rack-*-mutton-salted": "Will make 4 Dry Mutton after 72 hours of direct sunlight.",
 
   "block-drying-rack-birch-leatherstrips-mutton-dry-*": "Birch & Leather Strips Drying Rack with Dry Mutton",
   "block-drying-rack-oak-leatherstrips-mutton-dry-*": "Oak & Leather Strips Drying Rack with Dry Mutton",
@@ -323,7 +323,7 @@
   "block-drying-rack-pine-sisal-mutton-dry-*": "Pine & Sisal Drying Rack with Dry Mutton",
   "block-drying-rack-acacia-sisal-mutton-dry-*": "Acacia & Sisal Drying Rack with Dry Mutton",
   "block-drying-rack-kapok-sisal-mutton-dry-*": "Kapok & Sisal Drying Rack with Dry Mutton",
-  "blockdesc-drying-rack-*-mutton-dry-*": "Hold RMB to harvest 4 Dry Mutton ",
+  "blockdesc-drying-rack-*-mutton-dry-*": "Hold RMB to harvest 4 Dry Mutton",
 
 
   "block-drying-rack-birch-leatherstrips-salt-meat-*": "Birch & Leather Strips Drying Rack with Salt Meat",
@@ -350,7 +350,7 @@
   "block-drying-rack-pine-sisal-salt-meat-*": "Drying & Sisal Drying Rack with Salt Meat",
   "block-drying-rack-acacia-sisal-salt-meat-*": "Acacia & Sisal Drying Rack with Salt Meat",
   "block-drying-rack-kapok-sisal-salt-meat-*": "Kapok & Sisal Drying Rack with Salt Meat",
-  "blockdesc-drying-rack-*-salt-meat": "Will make 4 Dry Meat in 72 hours, requires direct sunlight ",
+  "blockdesc-drying-rack-*-salt-meat": "Will produce 4 Dry Meat after 72 hours of direct sunlight.",
 
   "block-drying-rack-birch-leatherstrips-dry-meat-*": "Birch & Leather Strips Drying Rack with Dry Meat",
   "block-drying-rack-oak-leatherstrips-dry-meat-*": "Oak & Leather Strips Drying Rack with Dry Meat",
@@ -421,7 +421,7 @@
   "block-dryingmat-dry-medium-whitecurrant-*": "Medium Drying Mat with Dry White Currant",
   "block-dryingmat-fresh-large-whitecurrant-*": "Large Drying Mat with Fresh White Currant",
   "block-dryingmat-dry-large-whitecurrant-*": "Large Drying Mat with Dry White Currant",
-  "blockdesc-dryingmat-fresh-*": "Will Produce Dry Fruit after 48 hours. Requires Direct Sunlight.",
+  "blockdesc-dryingmat-fresh-*": "Will Produce Dry Fruit after 48 hours of direct sunlight.",
   "blockdesc-dryingmat-dry-*": "Hold RMB to harvest the Dry Fruit.",
 
   
@@ -444,7 +444,7 @@
   "block-panel-maple-debarked-*": "Maple Debarked Panel",
   
   "blockdesc-panel-bamboo-*": "Place on ground (Sneak + RMB) and add materials to construct blocks. Add leather strips to begin Door Assembly,  Very Thin Branches to create a Bamboo Chest Frame, or bamboo stakes to craft bamboo planks. Can be placed on walls or floors for decoration.",
-  "blockdesc-panel-*-bark-*": "place on ground or walls for decoration.",
+  "blockdesc-panel-*-bark-*": "Place on ground or walls for decoration.",
   "blockdesc-panel-*-debarked-*": "Place on ground (Sneak + RMB) and add materials to construct blocks.  Add hinges to begin a Wood Door Assembly, or Very Thin Branches to create a Wood Chest Frame. Can be placed on walls or floors for decoration. Place on the ground and use the saw to create half panels.",
 
   "block-halfpanel-acacia-bark-*": "Acacia Barked Half Panel",
@@ -452,7 +452,7 @@
   "block-halfpanel-birch-bark-*": "Birch Barked Half Panel",
   "block-halfpanel-kapok-bark-*": "Kapok Barked Half Panel",
   "block-halfpanel-maple-bark-*": "Maple Barked Half Panel",
-  "block-halfpanel-oak-bark-*": "oak Barked Half Panel",
+  "block-halfpanel-oak-bark-*": "Oak Barked Half Panel",
   "block-halfpanel-pine-bark-*": "Pine Barked Half Panel",
 
   "block-halfpanel-acacia-debarked-*": "Acacia Debarked Half Panel",
@@ -460,7 +460,7 @@
   "block-halfpanel-birch-debarked-*": "Birch Debarked Half Panel",
   "block-halfpanel-kapok-debarked-*": "Kapok Debarked Half Panel",
   "block-halfpanel-maple-debarked-*": "Maple Debarked Half Panel",
-  "block-halfpanel-oak-debarked-*": "oak Debarked Half Panel",
+  "block-halfpanel-oak-debarked-*": "Oak Debarked Half Panel",
   "block-halfpanel-pine-debarked-*": "Pine Debarked Half Panel",
   
   "block-panel-aged-planks-*": "Aged Plank Panel",
@@ -511,7 +511,7 @@
   "blockdesc-chestsides-*": "Add 2 metal hinges (Sneak + RMB) to create a Latched Wood Chest",
 
   "block-chestlatched-bamboo-brown-*": "Latched Brown Bamboo Chest",
-  "block-chestlatched-bamboo-green-*": "Latched GreenBamboo Chest",
+  "block-chestlatched-bamboo-green-*": "Latched Green Bamboo Chest",
   "block-chestlatched-acacia-*": "Latched Acacia Chest",
   "block-chestlatched-aged-*": "Latched Aged Chest",
   "block-chestlatched-birch-*": "Latched Birch Chest",
@@ -553,24 +553,24 @@
   "block-normal-generic-bamboo-green-chest-*": "Immersion Green Bamboo Chest",
   "block-normal-generic-bamboo-brown-chest-*": "Immersion Brown Bamboo Chest",
 
-  "block-normal-labeled-acacia-labeledchest-*": "Immersion Acacia Labeled chest",
-  "block-normal-labeled-aged-labeledchest-*": "Immersion Aged Labeled chest",
-  "block-normal-labeled-birch-labeledchest-*": "Immersion Birch Labeled chest",
-  "block-normal-labeled-kapok-labeledchest-*": "Immersion Kapok Labeled chest",
-  "block-normal-labeled-maple-labeledchest-*": "Immersion Maple Labeled chest",
-  "block-normal-labeled-oak-labeledchest-*": "Immersion Oak Labeled chest",
-  "block-normal-labeled-pine-labeledchest-*": "Immersion Pine Labeled chest",
-  "block-normal-labeled-bamboo-green-labeledchest-*": "Immersion Green Bamboo Labeled chest",
+  "block-normal-labeled-acacia-labeledchest-*": "Immersion Acacia Labeled Chest",
+  "block-normal-labeled-aged-labeledchest-*": "Immersion Aged Labeled Chest",
+  "block-normal-labeled-birch-labeledchest-*": "Immersion Birch Labeled Chest",
+  "block-normal-labeled-kapok-labeledchest-*": "Immersion Kapok Labeled Chest",
+  "block-normal-labeled-maple-labeledchest-*": "Immersion Maple Labeled Chest",
+  "block-normal-labeled-oak-labeledchest-*": "Immersion Oak Labeled Chest",
+  "block-normal-labeled-pine-labeledchest-*": "Immersion Pine Labeled Chest",
+  "block-normal-labeled-bamboo-green-labeledchest-*": "Immersion Green Bamboo Labeled Chest",
   "block-normal-labeled-bamboo-brown-labeledchest-*": "Immersion Brown Bamboo Labeled chest",
 
 
-  "block-halflog-aged-ud": "Half Log Aged ",
-  "block-halflog-birch-ud": "Half Log Birch ",
-  "block-halflog-oak-ud": "Half Log Oak ",
-  "block-halflog-maple-ud": "Half Log Maple ",
-  "block-halflog-pine-ud": "Half Log Pine ",
-  "block-halflog-acacia-ud": "Half Log Acacia ",
-  "block-halflog-kapok-ud": "Half Log Kapok ",
+  "block-halflog-aged-ud": "Aged Half Log",
+  "block-halflog-birch-ud": "Birch Half Log",
+  "block-halflog-oak-ud": "Oak Half Log",
+  "block-halflog-maple-ud": "Maple Half Log",
+  "block-halflog-pine-ud": "Pine Half Log",
+  "block-halflog-acacia-ud": "Acacia Half Log",
+  "block-halflog-kapok-ud": "Kapok Half Log",
   "blockdesc-halflog-*": "Hold (Sneak + RMB) with an axe in the active hand to make the Chopping Block ",
 
 
